infra/istio/cert-manager/manifest/routing/gateway-resource.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-resource
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: echo-mycompany-com-cert
      hosts:
        - 'echo.mycompany.com'
