infra/istio/cert-manager/manifest/routing/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
  namespace: echoserver
spec:
  hosts:
    - echo.mycompany.com
  gateways:
    - istio-system/istio-ingressgateway-resource
  http:
    - route:
      - destination:
          host: echoserver.echoserver.svc.cluster.local
          port:
            number: 80
